--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css">
 </head>
 
@@ -68,7 +68,7 @@
         </nav>
     </header>
     <main class="main" role="main" id="main">
-        <section class="section section-home">
+        <section class="section section-home section-active">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
@@ -130,32 +130,32 @@
                 </div>
             </div>
         </section>
-        <section class="section section-manageOrders section-active">
-            <div class="container">
-                <div class="row">
-                    <h2 class="title w-100 mb-4">Manage Orders</h2>
-                    <div class="layout-wrapper">
-                        <div class="layout-header">
+        <section class="section section-manageOrders >
+            <div class=" container">
+            <div class="row">
+                <h2 class="title w-100 mb-4">Manage Orders</h2>
+                <div class="layout-wrapper">
+                    <div class="layout-header">
 
-                        </div>
-                        <div class="layout-content">
-                            <table class="table table-hover w-100" id="table-manageOrders">
-                                <thead>
-                                    <tr>
-                                        <th>OrderId</th>
-                                        <th>Customers</th>
-                                        <th>Date</th>
-                                        <th></th>
-                                    </tr>
+                    </div>
+                    <div class="layout-content">
+                        <table class="table table-hover w-100" id="table-manageOrders">
+                            <thead>
+                                <tr>
+                                    <th>OrderId</th>
+                                    <th>Customers</th>
+                                    <th>Date</th>
+                                    <th></th>
+                                </tr>
 
-                                </thead>
-                                <tbody>
+                            </thead>
+                            <tbody>
 
-                                </tbody>
-                            </table>
-                        </div>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
+            </div>
             </div>
 
 
