--- a/index.html
+++ b/index.html
@@ -130,32 +130,32 @@
                 </div>
             </div>
         </section>
-        <section class="section section-manageOrders >
+        <section class="section section-manageOrders">
             <div class=" container">
-            <div class="row">
-                <h2 class="title w-100 mb-4">Manage Orders</h2>
-                <div class="layout-wrapper">
-                    <div class="layout-header">
+                <div class="row">
+                    <h2 class="title w-100 mb-4">Manage Orders</h2>
+                    <div class="layout-wrapper">
+                        <div class="layout-header">
 
-                    </div>
-                    <div class="layout-content">
-                        <table class="table table-hover w-100" id="table-manageOrders">
-                            <thead>
-                                <tr>
-                                    <th>OrderId</th>
-                                    <th>Customers</th>
-                                    <th>Date</th>
-                                    <th></th>
-                                </tr>
+                        </div>
+                        <div class="layout-content">
+                            <table class="table table-hover w-100" id="table-manageOrders">
+                                <thead>
+                                    <tr>
+                                        <th>OrderId</th>
+                                        <th>Customers</th>
+                                        <th>Date</th>
+                                        <th></th>
+                                    </tr>
 
-                            </thead>
-                            <tbody>
+                                </thead>
+                                <tbody>
 
-                            </tbody>
-                        </table>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
-            </div>
             </div>
 
 
